SERVER-121641. Add CBR stats back to winning plan (#50618)

GitOrigin-RevId: d6a375f03902788206c0a3bd9ea25bdabafb08d6