jstests/noPassthrough/query/multiplanner/tie_breaking_index_prefix.js
@@ -4,8 +4,8 @@
 
 "use strict";
 
-import {getPlanStages} from "jstests/libs/query/analyze_plan.js";
-import {getPlanRankerMode} from "jstests/libs/query/cbr_utils.js";
+import {getPlanStages, getWinningPlanFromExplain} from "jstests/libs/query/analyze_plan.js";
+import {getPlanRankerMode, isPlanCosted} from "jstests/libs/query/cbr_utils.js";
 import {checkSbeFullyEnabled} from "jstests/libs/query/sbe_util.js";
 
 // Test initialization.
@@ -202,10 +202,9 @@ function preferShortestIndexWithComparisonsInFilter(indexPruningActive) {
 
         // If we fall back to CBR, we will choose the smaller index regardless of whether index pruning is used or not.
 
-        // TODO(SERVER-121641): Switch this back to isPlanCosted() after fixing the winning plan
-        // not having CBR estimates even if picked by CBR.
         // TODO SERVER-100611: re-enable these tests.
-        // if (getPlanRankerMode(conn) !== "multiPlanning" && !checkSbeFullyEnabled(db)) {
+        // const winningPlan = getWinningPlanFromExplain(explain);
+        // if (isPlanCosted(winningPlan) && !checkSbeFullyEnabled(db)) {
         //     assertIndexScan(false, filter, [{a: 1, b: 1}], explain);
         // } else {
         assertIndexScan(false, filter, [{a: 1, b: 1, c: 1}], explain);
